--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
 body {
     color: lawngreen;
     font-size: 43px;
+    background-color: black;
+}
+
+h1 {
+    color: lightgreen;
+    font-size: 6rem;
 }
